# kore

src/main/haskell/kore/: package.yaml
src/main/haskell/kore/app/play/: Main.hs
src/main/haskell/language-kore/src/Data/Kore/AST/: Common.hs  PureML.hs
src/main/haskell/language-kore/src/Data/Kore/ASTVerifier/: SentenceVerifier.hs
src/main/haskell/language-kore/src/Data/Kore/Implicit/: Attributes.hs
src/main/haskell/language-kore/src/Data/Kore/IndexedModule/: IndexedModule.hs
src/main/haskell/language-kore/src/Data/Kore/MetaML/: AST.hs  Lift.hs  MetaToKore.hs
src/main/haskell/matching-logic/: .gitignore  ChangeLog.md  README.md  matching-logic.cabal
src/main/haskell/matching-logic/app/: Main.hs
src/main/haskell/matching-logic/src/Kore/MatchingLogic/: AST.hs  DummyProofSystem.hs  HilbertProof.hs  MLProofSystem.hs  MLProofSystemParsers.hs  ProverRepl.hs  Signature.hs
src/main/haskell/matching-logic/src/Kore/MatchingLogic/AST/: Syntax.hs
src/main/haskell/matching-logic/src/Kore/MatchingLogic/ProofSystem/: Dummy.hs  Minimal.hs
src/main/haskell/matching-logic/src/Kore/MatchingLogic/ProofSystem/Minimal/: Syntax.hs
src/main/haskell/matching-logic/src/Kore/MatchingLogic/Signature/: MetaK.hs  Poly.hs  Simple.hs
src/main/haskell/matching-logic/test/: AllTests.hs  RuleParserTests.hs  TestUtils.hs
src/main/haskell/matching-logic/test/Kore/MatchingLogic/ProofSystem/: TestProofs.hs
src/main/k/working/: README.md
src/main/scala/org/kframework/kore/interfaces/: Interfaces.scala
src/test/scala/org/kframework/kore/: NodeTest.scala
