name:           matching-logic
version:        0.0.1.0
description:    Please see the README on Github at <https://github.com/kframework/src/haskell/matching-logic/README.md>
category:       Language
homepage:       https://github.com/kframework/kore#readme
bug-reports:    https://github.com/kframework/kore/issues
author:         Brandon Moore
maintainer:     brandon.moore@runtimeverification.com
copyright:      2018 Runtime Verification Inc
license:        OtherLicense
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/kframework/kore
executable prover
  hs-source-dirs:
      app
  main-is: Main.hs
  build-depends: base >=4.7 && <5
               , mtl
               , text
               , parsec
               , haskeline
               , matching-logic
  default-language: Haskell2010
library
  hs-source-dirs:
      src
  build-depends: base >=4.7 && <5
               , containers
               , mtl
               , text
               , parsec
               , haskeline
               , reflection
  exposed-modules:
      Kore.MatchingLogic.HilbertProof
    , Kore.MatchingLogic.DummyProofSystem
    , Kore.MatchingLogic.ProverRepl
    , Kore.MatchingLogic.MLProofSystem
    , Kore.MatchingLogic.MLProofSystemParsers
  default-language: Haskell2010
  default-extensions: DataKinds
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , MultiParamTypeClasses
                    , FunctionalDependencies
                    , FlexibleInstances
                    , TypeSynonymInstances
                    , RankNTypes
                    , ScopedTypeVariables
                    , StandaloneDeriving

test-suite test
  type: exitcode-stdio-1.0
  main-is: AllTests.hs
  hs-source-dirs:
      test/
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , matching-logic
    , tasty
    , tasty-ant-xml
    , tasty-golden
    , tasty-hunit
    , tasty-quickcheck
  default-language: Haskell2010
